Fix /tp rotation